# azure-practice

./: pyproject.toml
infra/: infra.bicep
src/: main.py
